--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="" />
-    <script src="./index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300;0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>RxJS Playground</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <h2>Chmod Calculator</h2>
+    <h2 class="title">Chmod Calculator</h2>
     <div class="container">
       <form></form>
       <div class="result-container">
